# llama_index_hands_on

./: .gitignore  README.md
Notebooks/: Llama_Index_Documents_and_Nodes.ipynb  Llama_index_Nodes_Metadata_Extraction.ipynb
agentic_chatbot_RAG/: pyproject.toml
agentic_chatbot_RAG/src/agentic_chatbot_rag/: app.py  conversation_engine.py  document_uploader.py  index_builder.py  logg.py  quiz_builder.py  quiz_ui.py  session.py  settings.py  slides.py  training_material_builder.py  training_ui.py  user_onboarding.py
